<resources>
    <string name="app_name">Fune_Macato_Project</string>
    <string name="title_activity_fishing_etiquette">FishingEtiquette</string>
    <string name="fishing_guidebook">Fishing Guidebook</string>
    <string name="how_to_fish">How to Fish</string>
    <string name="equipment">Equipment</string>
    <string name="fishing_etiquette">Fishing Etiquette</string>
    <string name="unsafe_fishing">Unsafe Fishing</string>
    <string name="about_us">About Us</string>
    <string name="todo">TODO</string>
    <string name="preparing_to_fish">Preparing to Fish</string>
    <string name="going_fishing">Going Fishing</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_preparing_to_fish">PreparingToFish</string>
    <string name="there_are_plenty_of_fish_in_the_sea_but_finding_the_right_area_could_mean_more_specific_catches_better_catching_probability_or_even_a_friendlier_community_to_help_enjoy_the_trip">There are plenty of fish in the sea, but finding the right area could mean more specific catches, better catching probability, or even a friendlier community to help enjoy the trip.</string>
    <string name="for_people_who_live_on_the_coast_saltwater_fishing_is_an_easy_pick_for_them_they_will_probably_already_have_several_poplar_sites_around_them_generally_the_most_popular_among_them_would_be_a_great_place_to_start_as_it_would_have_the_most_community_built_around_it_as_well_as_contain_a_probable_good_fish_population">For people who live on the coast, saltwater fishing is an easy pick for them. They will probably already have several poplar sites around them. Generally the most popular among them would be a great place to start as it would have the most community built around it as well as contain a probable good fish population.</string>
    <string name="for_the_more_landlocked_areas_finding_a_spot_may_just_involve_asking_around_with_locals_or_at_fishing_shops_of_any_kind_people_who_regularly_fish_tend_to_be_very_friendly_and_eager_to_show_what_they_know_to_beginners">For the more landlocked areas, finding a spot may just involve asking around with locals or at fishing shops of any kind. People who regularly fish tend to be very friendly and eager to show what they know to beginners.</string>
    <string name="_1_research_areas_for_fishing">1.) Research areas for Fishing:</string>
    <string name="_2_investigate_good_times_to_go_fishing">2.) Investigate good times to go Fishing:</string>
    <string name="after_you_ve_found_a_place_the_timing_should_be_accounted_for_as_well_for_example_plenty_of_people_tend_to_fish_around_dawn_or_dusk_as_these_are_peak_feeding_times_for_fish">After you\'ve found a place, the timing should be accounted for as well. For example, plenty of people tend to fish around dawn or dusk as these are peak feeding times for fish.</string>
    <string name="textview">TextView</string>
    <string name="_3_make_sure_you_have_the_permissions_needed">3.) Make sure you have the permissions needed:</string>
    <string name="however_many_more_private_or_commercial_fishing_areas_exist_where_admission_is_charged_in_order_to_enter_and_fish_these_such_places_include_that_permission_within_their_cost_making_them_cheaper_than_a_license_for_occasional_trips">However, many more private or commercial fishing areas exist where admission is charged in order to enter and fish. These such places include that permission within their cost, making them cheaper than a license for occasional trips.</string>
    <string name="localized_fishing_licenses_are_required_in_order_to_fish_and_take_your_catch_home_these_licenses_can_be_obtained_from_local_department_of_fish_and_wildlife_centers">Localized fishing licenses are required in order to fish and take your catch home. These licenses can be obtained from local Department of Fish and Wildlife centers</string>
    <string name="_4_grab_the_right_reel_and_rod_for_you">4.) Grab the right reel and rod for you:</string>
    <string name="as_long_as_the_line_is_medium_in_length_and_flexible_it_should_do_fine_for_beginners_for_now_these_details_shouldn_t_concern_you_too_much_until_you_enjoy_the_sport_are_familiar_with_it_and_are_ready_to_invest_in_better_equipment_for_now_the_basics_will_do_just_fine">As long as the line is medium in length and flexible, it should do fine for beginners. For now, these details shouldn\'t concern you too much until you enjoy the sport, are familiar with it, and are ready to invest in better equipment. For now, the basics will do just fine.</string>
    <string name="prices_will_vary_but_getting_the_rod_from_a_regular_big_box_retailer_would_probably_do_you_much_more_than_going_to_a_specialty_store_try_to_get_a_bundle_that_comes_with_its_own_reel_and_tackle_box_as_you_can_use_these_to_learn_which_tools_you_want_to_use_continuously">Prices will vary, but getting the rod from a regular big-box retailer would probably do you much more than going to a specialty store. Try to get a bundle that comes with its own reel and tackle box as you can use these to learn which tools you want to use continuously.</string>
    <string name="as_for_bait_live_fake_and_dead_bait_are_all_options_for_you_to_buy_these_are_all_fine_for_now_as_you_will_eventually_learn_how_to_use_other_tools_to_catch_your_own_bait_later_in_addition_it_is_useful_to_get_over_any_squeamishness_on_dead_bait_before_you_move_on_to_live_bait">As for bait, live, fake, and dead bait are all options for you to buy. These are all fine for now as you will eventually learn how to use other tools to catch your own bait later. In addition, it is useful to get over any squeamishness on dead bait before you move on to live bait.</string>
    <string name="if_you_are_going_to_be_using_live_bait_be_aware_of_the_need_to_contain_them_in_some_sort_of_storage_and_keep_them_alive_by_either_cycling_water_within_the_storage_or_using_an_air_pump_to_pump_oxygen_back_into_the_water_otherwise_the_bait_will_die_in_several_minutes">If you are going to be using live bait, be aware of the need to contain them in some sort of storage and keep them alive by either cycling water within the storage or using an air pump to pump oxygen back into the water. Otherwise, the bait will die in several minutes.</string>
    <string name="_5_prepare_your_bait">5.) Prepare your bait:</string>
    <string name="button">Button</string>
    <string name="back">Back</string>
    <string name="home">Home</string>
    <string name="_1_prepare_your_line">1.) Prepare your line.</string>
    <string name="preparing_your_line_with_the_appropriate_bait_and_tools_can_take_some_time_to_learn_as_different_items_have_different_uses_and_knowing_which_to_use_takes_some_familiarity_with_their_effects_on_the_line">Preparing your line with the appropriate bait and tools can take some time to learn as different items have different uses and knowing which to use takes some familiarity with their effects on the line.</string>
    <string name="tying_the_knots_in_lines_may_require_some_certain_special_kinds_of_knots_a_basic_one_that_is_useful_to_learn_as_well_as_easy_is_the_j_knot_which_can_be_best_learned_with_a_short_supplemental_video_tutorial_search_sinkers_or_weights_are_used_to_give_the_line_more_inertia_against_currents_in_order_to_sop_your_hook_from_just_floating_on_the_surface">Tying the knots in lines may require some certain special kinds of knots. A basic one that is useful to learn as well as easy is the J knot, which can be best learned with a short supplemental video tutorial search. Sinkers, or weights, are used to give the line more inertia against currents in order to sop your hook from just floating on the surface.</string>
    <string name="bobbers_are_used_for_visibly_seeing_your_line_and_any_potential_bites_tugging_down_on_it_baiting_a_hook_may_not_be_the_most_pleasant_task_but_bait_should_usually_be_hooked_several_times_for_security_however_it_should_look_natural_as_animals_would_not_aim_for_dead_looking_fish_and_like_to_only_bite_live_looking_bait">Bobbers are used for visibly seeing your line and any potential bites tugging down on it. Baiting a hook may not be the most pleasant task, but bait should usually be hooked several times for security. However, it should look natural as animals would not aim for dead looking fish and like to only bite live-looking bait.</string>
    <string name="_2_cast_the_line">2.) Cast the line.</string>
    <string name="for_both_the_main_types_of_reels_the_technique_is_the_same_both_reels_have_a_locked_and_released_phase_for_its_line_the_general_technique_is_to_unlock_the_line_and_hold_it_with_your_fingers_and_then_swing_your_rod_in_an_arc_letting_go_of_the_line_at_the_peak_of_the_arc_the_momentum_should_cause_the_hook_if_it_s_heavy_enough_to_fly_as_it_sinks_the_line_should_be_locked_as_to_not_let_the_string_fall_loose_around_the_real_or_to_let_a_fish_just_walk_away_with_your_hook">For both the main types of reels, the technique is the same. Both reels have a locked and released phase for its line. The general technique is to unlock the line and hold it with your fingers and then swing your rod in an arc, letting go of the line at the peak of the arc. The momentum should cause the hook (if it\'s heavy enough) to fly. As it sinks, the line should be locked as to not let the string fall loose around the real or to let a fish just walk away with your hook.</string>
    <string name="_3_wait_for_a_fish">3.) Wait for a fish.</string>
    <string name="patience_is_a_well_known_attribute_to_fishing_but_is_a_bit_exaggerated_don_t_be_impatient_with_your_rod_after_about_leaving_it_for_about_15_minutes_it_is_a_good_idea_to_take_it_out_and_recast_it_it_may_need_to_be_baited_again_so_leaving_it_in_longer_than_that_could_be_a_waste_of_time">Patience is a well-known attribute to fishing, but is a bit exaggerated. Don\'t be impatient with your rod, after about leaving it for about 15 minutes, it is a good idea to take it out and recast it. It may need to be baited again, so leaving it in longer than that could be a waste of time.</string>
    <string name="step_1_preparing_to_fish">Step 1: Preparing to Fish</string>
    <string name="step_2_going_fishing">Step 2: Going Fishing</string>
    <string name="next">Next</string>
    <string name="_2_honor_anglers_who_arrived_before_you">2) Honor anglers who arrived before you.</string>
    <string name="_3_rest_the_water">3) Rest the water.</string>
    <string name="_4_be_clean">4) Be clean.</string>
    <string name="_5_boaters_should_yield_to_wade_fishermen">5) Boaters should yield to wade fishermen.</string>
    <string name="_6_a_careful_approach">6) A careful approach.</string>
    <string name="_1_don_t_crowd_other_anglers">1) Don\'t Crowd other Anglers.</string>
</resources>