<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FishingEtiquette">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/fishing_etiquette"
        android:textAllCaps="false"
        android:textSize="42sp" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button16"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="process"
        android:text="@string/_2_honor_anglers_who_arrived_before_you"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button10"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="process"
        android:text="@string/_3_rest_the_water"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/button13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button11"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="process"
        android:text="@string/_4_be_clean"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/button14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button13"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="process"
        android:text="@string/_5_boaters_should_yield_to_wade_fishermen"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/button15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@+id/button14"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="process"
        android:text="@string/_6_a_careful_approach"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/button16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView10"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:onClick="process"
        android:text="@string/_1_don_t_crowd_other_anglers"
        android:textAllCaps="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="bottom|center"
        android:orientation="vertical">

        <Button
            android:id="@+id/button17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="process"
            android:text="@string/home" />
    </LinearLayout>

</RelativeLayout>