<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".preparing_to_fish_3">

    <TextView
        android:id="@+id/textView35"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/preparing_to_fish"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/_3_make_sure_you_have_the_permissions_needed"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/localized_fishing_licenses_are_required_in_order_to_fish_and_take_your_catch_home_these_licenses_can_be_obtained_from_local_department_of_fish_and_wildlife_centers" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/however_many_more_private_or_commercial_fishing_areas_exist_where_admission_is_charged_in_order_to_enter_and_fish_these_such_places_include_that_permission_within_their_cost_making_them_cheaper_than_a_license_for_occasional_trips"
        android:textStyle="italic" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button8"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_vertical|center_horizontal|center"
            android:onClick="process"
            android:text="@string/back" />

        <Button
            android:id="@+id/button9"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="process"
            android:text="@string/next" />
    </LinearLayout>

</LinearLayout>