<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PreparingToFish">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/preparing_to_fish"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10sp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/_1_research_areas_for_fishing"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingStart="10sp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/there_are_plenty_of_fish_in_the_sea_but_finding_the_right_area_could_mean_more_specific_catches_better_catching_probability_or_even_a_friendlier_community_to_help_enjoy_the_trip" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:paddingStart="10sp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/for_people_who_live_on_the_coast_saltwater_fishing_is_an_easy_pick_for_them_they_will_probably_already_have_several_poplar_sites_around_them_generally_the_most_popular_among_them_would_be_a_great_place_to_start_as_it_would_have_the_most_community_built_around_it_as_well_as_contain_a_probable_good_fish_population"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:paddingStart="10sp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/for_the_more_landlocked_areas_finding_a_spot_may_just_involve_asking_around_with_locals_or_at_fishing_shops_of_any_kind_people_who_regularly_fish_tend_to_be_very_friendly_and_eager_to_show_what_they_know_to_beginners"
        android:textStyle="italic" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button8"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_vertical|center_horizontal|center"
            android:onClick="process"
            android:text="@string/back" />

        <Button
            android:id="@+id/button9"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="process"
            android:text="@string/next" />
    </LinearLayout>

</LinearLayout>