<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".preparing_to_fish_4">

    <TextView
        android:id="@+id/textView39"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/preparing_to_fish"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/_4_grab_the_right_reel_and_rod_for_you"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/as_long_as_the_line_is_medium_in_length_and_flexible_it_should_do_fine_for_beginners_for_now_these_details_shouldn_t_concern_you_too_much_until_you_enjoy_the_sport_are_familiar_with_it_and_are_ready_to_invest_in_better_equipment_for_now_the_basics_will_do_just_fine" />

    <TextView
        android:id="@+id/textView42"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/prices_will_vary_but_getting_the_rod_from_a_regular_big_box_retailer_would_probably_do_you_much_more_than_going_to_a_specialty_store_try_to_get_a_bundle_that_comes_with_its_own_reel_and_tackle_box_as_you_can_use_these_to_learn_which_tools_you_want_to_use_continuously"
        android:textStyle="italic" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button8"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_vertical|center_horizontal|center"
            android:onClick="process"
            android:text="@string/back" />

        <Button
            android:id="@+id/button9"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="process"
            android:text="@string/next" />
    </LinearLayout>

</LinearLayout>