<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".preparing_to_fish_5">

    <TextView
        android:id="@+id/textView47"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/preparing_to_fish"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView48"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/_5_prepare_your_bait"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView49"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/as_for_bait_live_fake_and_dead_bait_are_all_options_for_you_to_buy_these_are_all_fine_for_now_as_you_will_eventually_learn_how_to_use_other_tools_to_catch_your_own_bait_later_in_addition_it_is_useful_to_get_over_any_squeamishness_on_dead_bait_before_you_move_on_to_live_bait" />

    <TextView
        android:id="@+id/textView50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/if_you_are_going_to_be_using_live_bait_be_aware_of_the_need_to_contain_them_in_some_sort_of_storage_and_keep_them_alive_by_either_cycling_water_within_the_storage_or_using_an_air_pump_to_pump_oxygen_back_into_the_water_otherwise_the_bait_will_die_in_several_minutes"
        android:textStyle="italic" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button8"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_vertical|center_horizontal|center"
            android:onClick="process"
            android:text="@string/back" />

        <Button
            android:id="@+id/button9"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="process"
            android:text="@string/going_fishing" />
    </LinearLayout>

</LinearLayout>