<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".going_fishing_2">

    <TextView
        android:id="@+id/textView18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/going_fishing"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/_2_cast_the_line"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView44"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/for_both_the_main_types_of_reels_the_technique_is_the_same_both_reels_have_a_locked_and_released_phase_for_its_line_the_general_technique_is_to_unlock_the_line_and_hold_it_with_your_fingers_and_then_swing_your_rod_in_an_arc_letting_go_of_the_line_at_the_peak_of_the_arc_the_momentum_should_cause_the_hook_if_it_s_heavy_enough_to_fly_as_it_sinks_the_line_should_be_locked_as_to_not_let_the_string_fall_loose_around_the_real_or_to_let_a_fish_just_walk_away_with_your_hook" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button8"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_vertical|center_horizontal|center"
            android:onClick="process"
            android:text="@string/back" />

        <Button
            android:id="@+id/button9"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="process"
            android:text="@string/next" />
    </LinearLayout>
</LinearLayout>